# zotero

./: .gitignore  build  install  pyproject.toml  requirements.txt
data/: libraries-sample.yml
zotero/: __init__.py  zotero.py
